forcedotcom/src/objects/eBayAPI__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>UserTokenPart1__c</fullName>
        <label>User Token (Part 1)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UserTokenPart2__c</fullName>
        <label>User Token (Part 2)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UserTokenPart3__c</fullName>
        <label>User Token (Part 3)</label>
        <type>TextArea</type>
    </fields>
    <label>eBay API</label>
</CustomObject>